# demo_cmake

./: .gitmodules  CMakeLists.txt  README.md
liv/: test
src/: main.c  sugar.cmake
src/gp/: amdc.c  amdc.h  amdd.c  amdd.h  gp.c  gp.h  sugar.cmake
src/lib/: CMakeLists.txt  lib.c  lib.h
